# movie_library_manager

./: .gitignore  AGENTS.md  README.md  cli.py  filter_movies.py  keys.py  lookup_yts.py  pyproject.toml  scanner.py  tasks.sh  yts.py
data/: lost_movies.csv  low_quality_movies.csv  manual_recovery.csv  movies-data-loss.xlsx
media_hygiene/: cli.py
scripts/: clean_manual_recovery.py  combine_lost_2017.py  concat_loss_2017.py  fuzzy_match_lost.py  imdb_suggest_yts_enrich.py  imdb_yts_enrich.py  loss_match.py  normalize_manual_recovery.py  setup.sh  tmdb_yts_enrich.py  transmission_add.sh
