[project]
name = "movie-library-manager"
version = "0.1.0"
description = "Scan movie libraries for low-quality/lost items and query YTS replacements."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0",
]

[project.scripts]
movie-library-manager = "cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
